--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ span{
     /* border: 1px solid; */
     width: 60%;
     background: #6d6d6d;
+    display: flex;
 }
 .right img{
     margin-left: -450px;
@@ -124,4 +125,23 @@ span{
 .number-char{
     color: #DA4167;
     font-size: 100px;
+}
+.search{
+    height: 30px;
+    display: flex;
+    cursor: pointer;
+    padding: 10px 20px;
+    background: #fff;
+    border-radius: 30px;
+    align-items: center;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+
+}
+.search:hover input{
+    width: 400px;
+
+}
+.search input{
+    width: 0;
+    outline: none;
 }
