--- a/style.css
+++ b/style.css
@@ -127,21 +127,34 @@ span{
     font-size: 100px;
 }
 .search{
-    height: 30px;
+    margin-top: 20px;
+    height: 40px;
     display: flex;
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 20px 10px;
     background: #fff;
     border-radius: 30px;
     align-items: center;
     box-shadow: 0 10px 25px rgba(0,0,0,0.3);
 
 }
+.search a{
+    text-decoration: none;
+    
+}
 .search:hover input{
-    width: 400px;
+    width: 250px;
 
 }
 .search input{
     width: 0;
     outline: none;
+    border: none;
+    font-weight: 500;
+    transition: 0.8s;
+    background: transparent;
+}
+.search a .ri-search-line{
+    color: #000000;
+    font-size: 25px;
 }
