--- a/style.css
+++ b/style.css
@@ -158,3 +158,14 @@ span{
     color: #000000;
     font-size: 25px;
 }
+.login{
+    border: 1px solid;
+    margin-left: 350px;
+    margin-top: 20px;
+}
+.login a {
+    font-size: 30px;
+    color: #0077ff;
+    text-decoration: none;
+    
+}
